update interview